@@ -3951,7 +3951,7 @@ block|}
 if|if
 condition|(
 name|pos
-operator|<=
+operator|<
 name|lastPosition
 condition|)
 block|{
@@ -3963,7 +3963,7 @@ literal|"position "
 operator|+
 name|pos
 operator|+
-literal|" is<= lastPosition "
+literal|" is< lastPosition "
 operator|+
 name|lastPosition
 argument_list|)
